# wingpanel-caffeine

./: README.md  meson.build
.github/workflows/: main.yml
data/: com.github.plugarut.wingpanel-caffeine.gschema.xml  icons.indicator.gresource.xml  meson.build
src/: Indicator.vala
src/Widgets/: PopoverWidget.vala
